www/skins/login/less/skin.less
/* ... */
/* ==========================================================================
   Chrome Frame prompt
   ========================================================================== */

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

html,
body {
    background: @background;
    color: @textColor;
    -webkit-font-smoothing: antialiased;
    text-shadow: 0 0 1px rgba(0,0,0,0.3);
    cursor: default;
    height: 100%;
}

/** Reset style */

ul {
    margin: 0;
    padding: 0;
}

/** Button style */

.btn {
    @glow: inset 0 1px 0 rgba(255, 255, 255, 0.2),  0 1px 7px rgba(0, 0, 0, 1);
    .glow(@glow);
    .border-radius(@borderRadiusSmall);
    text-shadow : 0 -1px 0 rgba(0, 0, 0, 0.5);
}

.btn-success {
    .gradient (@btnSuccessBackground, 0.7);
}

.btn-info {
    .gradient (@btnInfoBackground, 0.7);
}

.btn-success:hover {
    .gradient (@btnSuccessBackgroundHighlight, 0.7);
}

.btn-info:hover {
    .gradient (@btnInfoBackgroundHighlight, 0.7);
}

.btn-flat {
    filter:progid:DXImageTransform.Microsoft.Gradient(enabled='false');
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    background-image:none;
    border:0;
    text-shadow: none;
}

/** Helpers style */

.full-height {
    height: 100%;
}

.full-width {
    width: 100%;
}

.text-error {
    color: @colorError;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

.one-line {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.no-overflow {
    overflow: hidden;
}

.fixed-table {
    table-layout: fixed;
    width:100%;
}

.rounded {
    .border-radius(@borderRadiusSmall);
}

/** Recaptcha style */

#recaptcha_widget .btn-toolbar {
    width: 300px;
}

#recaptcha_widget .btn-toolbar .btn {
    min-width: 20%;
}

#recaptcha_widget table tr td {
    text-align: center;
}

#recaptcha_image {
    width: 100% !important;
}

#recaptcha_image img {
    width: 100% !important;
}

/** Alert style */

.alert {
    padding: 0px;
    text-shadow: 0 -1px 0 rgba(0,0,0,.5);
    line-height: 16px;
    @glow: 0 1px 7px rgba(0, 0, 0, 1);
    .glow(@glow);
}

.alert .alert-block-close {
    width:45px;
    text-align: center;
    font-size:36px
}

.alert table {
    border-collapse: separate;
}

.alert .alert-block-logo {
    width: 45px;
    vertical-align: top;
    text-align: center;
}

.alert .alert-block-close a:hover {
    text-decoration: none;
}

.alert.alert-success .alert-block-content {
    border-right: 1px solid lighten(@successBackground, 10%);
}

.alert.alert-success .alert-block-close {
    border-left: 1px solid darken(@successBackground, 20%);
}

.alert.alert-error .alert-block-content {
    border-right: 1px solid lighten(@errorBackground, 10%);
}

.alert.alert-error .alert-block-close {
    border-left: 1px solid darken(@errorBackground, 20%);
}

.alert.alert-info .alert-block-content {
    border-right: 1px solid lighten(@infoBackground, 10%);
}

.alert.alert-info .alert-block-close {
    border-left: 1px solid darken(@infoBackground, 20%);
}

.alert.alert-warning .alert-block-content {
    border-right: 1px solid lighten(@warningBackground, 10%);
}

.alert.alert-warning .alert-block-close {
    border-left: 1px solid darken(@warningBackground, 20%);
}

.alert .close {
    position: static;
}

.alert table {
    table-layout: fixed;
    width: 100%;
}

.alert table td {
   padding: 9px 5px;
}

/** app css */

.help-block-error {
    border: 1px solid @colorError;
}

.well-large {
    padding: 20px;
}

.close {
    color: @white;
    opacity: 1;
}

.btn-trigger {
    padding: 7px 12px;
    min-width: 100px;
}

.facebook-badge {
    background-color: @colorFacebook;
    .gradient(@colorFacebook, 0.8);
}

.google-plus-badge {
    background-color: @colorGooglePlus;
    .gradient(@colorGooglePlus, 0.8);
}

.viadeo-badge {
    background-color: @colorViadeo;
    .gradient(@colorViadeo, 0.8);
}

.twitter-badge {
    background-color: @colorTwitter;
    .gradient(@colorTwitter, 0.8);
}

.github-badge {
    background-color: @colorGithub;
    .gradient(@colorGithub, 0.8);
}

.linkedin-badge {
    background-color: @colorLinkedin;
    .gradient(@colorLinkedin, 0.8);
}

.match-hint {
    font-size: 13px;
}

.input-block-level {
    min-height: 36px;
}

.dropdown-menu {
    border-radius: 0px;
    min-width: 60px;
    .glow(@dropDownLanguageGlow);
}

#authentication-sidebar-language button {
    background-color: @backgroundSideBar;
    color: @white;
    border-radius: 0px;
    text-shadow: none;
    border-left: 1px solid @inputOutsideBorder;
    background-image: none;
    font-size: @fontSizeSmall;
    padding: 0 12px;
}

#authentication-sidebar-language li a {
    font-size: @fontSizeSmall
}

#authentication-sidebar-language .language {
    margin-right: 8px;
}

#authentication-sidebar-language .caret {
   margin:9px 0px  0px 7px;
   border-top-color: @languageCaretColor;
}

.left-content h1 {
    font-size: @fontSizeLarge;
}

.left-content .logo img {
    max-height: 100px;
}

.forget-password-link {
    font-size: @fontSizeSmall;
    text-decoration: underline;
}

label[for=remember-me]{
    padding-top: 5px;
}

.logo,
.header {
    padding: 10px 0;
}

button[type=submit] {
    margin: 30px 0px 0px 0px;
    width: 100%;
}

.authentication-sidebar {
    min-height: 100%;
    height: auto;
    background: @backgroundSideBar;
    border-radius: 0;
    .glow(@sideBarGlow);
    padding-bottom:50px;
}

.authentication-sidebar .text-title {
    margin: 15px 0;
}

.authentication-sidebar form .input-prepend {
    margin-left: 0px;
}

.authentication-sidebar form input {
    padding: 8px 5px;
}

.authentication-sidebar form label {
    margin-top: 15px;
}
/* ... */

